# TheBlogProject

./: .gitignore
Backend/: pyproject.toml
Backend/src/backend/: database.py  main.py
Backend/src/backend/cruds/: crud_user.py
Backend/src/backend/models/: users.py
Backend/src/backend/routers/: auth_routes.py  user_routes.py
Backend/src/backend/schemas/: user_schema.py
Backend/src/backend/utils/: security.py
Backend/tests/: test_auth.py  test_crud_user.py
Frontend/: package-lock.json  package.json
Frontend/src/: app.css
Frontend/src/routes/: +layout.svelte  +page.svelte
Frontend/src/routes/login/: +page.svelte
Frontend/src/routes/register/: +page.svelte
